# bluebubbles-mcp

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  docker-adhoc.yml  docker.yml
docs/: canonical-chat-identity.md  freshness-guard.md
src/bb_mcp/: capabilities.py  chats.py  client.py  contacts.py  freshness.py  policy.py  projection.py  server.py
tests/: conftest.py  test_capabilities.py  test_chats.py  test_client.py  test_contacts.py  test_freshness.py  test_policy.py  test_projection.py  test_transport.py
